Got SCSS working and tweaked some colors.

--- a/assets/_scss/_variables.scss
+++ b/assets/_scss/_variables.scss
@@ -53,9 +53,9 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
-$background-color           : #fff;
-$code-background-color      : #fafafa;
+$body-color                 : rgb(250, 250, 250);
+$background-color           : rgb(250, 250, 250);
+$code-background-color      : rgb(245, 245, 245);
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
