Set header font to rock-salt.

--- a/assets/_scss/_masthead.scss
+++ b/assets/_scss/_masthead.scss
@@ -13,7 +13,7 @@
     @include container;
     @include clearfix;
     padding: 1em 1em 1em;
-    font-family: $sans-serif-narrow;
+    font-family: $rock-salt;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
